; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kernel/cpufreq/extr_acpi-cpufreq.c_acpi_cpufreq_get.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kernel/cpufreq/extr_acpi-cpufreq.c_acpi_cpufreq_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpufreq_acpi_io = type { i32 }

@acpi_io_data = common dso_local global %struct.cpufreq_acpi_io** null, align 8
@.str = private unnamed_addr constant [18 x i8] c"acpi_cpufreq_get\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @acpi_cpufreq_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_cpufreq_get(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cpufreq_acpi_io*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.cpufreq_acpi_io**, %struct.cpufreq_acpi_io*** @acpi_io_data, align 8
  %5 = load i32, i32* %2, align 4
  %6 = zext i32 %5 to i64
  %7 = getelementptr inbounds %struct.cpufreq_acpi_io*, %struct.cpufreq_acpi_io** %4, i64 %6
  %8 = load %struct.cpufreq_acpi_io*, %struct.cpufreq_acpi_io** %7, align 8
  store %struct.cpufreq_acpi_io* %8, %struct.cpufreq_acpi_io** %3, align 8
  %9 = call i32 @dprintk(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %10 = load %struct.cpufreq_acpi_io*, %struct.cpufreq_acpi_io** %3, align 8
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @processor_get_freq(%struct.cpufreq_acpi_io* %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @dprintk(i8*) #1

declare dso_local i32 @processor_get_freq(%struct.cpufreq_acpi_io*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
